fix light/dark mode

--- a/UFS09/ProjectReact/CurrencyProject/src/css/index.css
+++ b/UFS09/ProjectReact/CurrencyProject/src/css/index.css
@@ -9,6 +9,10 @@
         --background-normal: url("../assets/light-vuoto-light.png");
         --background-hover: url("../assets/dark-vuoto-light.png");
     }
+
+    #prefered_theme {
+        content: "light";
+    }
 } 
 
 @media (prefers-color-scheme:dark){ 
@@ -21,6 +25,10 @@
         --text: #F6F4EE;
         --background-normal: url("../assets/dark-vuoto-dark.png");
         --background-hover: url("../assets/light-vuoto-dark.png");
+    }
+
+    #prefered_theme {
+        content: "dark";
     }
 }
 
